--- a/index.html
+++ b/index.html
@@ -12,10 +12,42 @@
     <title>WEBB</title>
 </head>
 <body>
-    <header>
-        <div class="navbar">
-            
+    <header class="col-12">
+        <div class="d-flex justify-content-between align-items-center">
+            <div class="col-4 logo">
+                <h1 class="logotext">
+                    WAZupp?
+                </h1>
+            </div>
+            <div class="col-4">
+                <ul class="navul d-flex justify-content-between">
+                    <li>
+                        About Us
+                    </li>
+                    <li>
+                        Articles       
+                    </li>
+                    <li>
+                        Contact
+                    </li>
+                </ul>      
+            </div>
+            <div class="col-4 d-flex flex-row-reverse">
+                <button class="btns align-items-center">
+                    <p class="p">
+                        Sign in
+                    </p>
+                </button>
+                <button class="btns">
+                    <p class="p">
+                        Register
+                    </p>
+                </button>
+            </div>
         </div>
     </header>
+    <section>
+        
+    </section>
 </body>
 </html>
