--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="d-flex justify-content-between align-items-center">
             <div class="col-4 logo">
                 <h1 class="logotext">
-                    WAZupp?
+                    WAZapp?
                 </h1>
             </div>
             <div class="col-4">
@@ -46,8 +46,61 @@
             </div>
         </div>
     </header>
-    <section>
-        
+    <section class="mt-5 col-12 justify-content-between d-flex">
+      <div class="col-12">
+        <div class="justify-content-center d-flex">
+            <div class="justify-content-center d-flex">
+                <h1 class="mrkrfont">
+                    what's WAZapp?
+                </h1>
+            </div>
+        </div>
+            <div class="mt-5 col-12 malifont text-center">
+                <p>
+                    Wazapp is daily Hip-Hop news web-site,where u can find some interesting articles about worldwide artists and some freshman too.itself has some kind of reminder funtction about Hip-Hop activities:Album releases,live shows,new collaborations.
+                </p>
+                <p class="mt-5">
+                    The near future we wanna add some interactive rating system,which gon be for yall users,u'll be able to post publicly ur opinion 'bout anything.
+                </p>
+                <p>
+                    At least but not last,yall gon' be able to chek web and see Wazapp,U gon' be asked Wazapp,yall gon' see Wazapp in Hip-Hop industry.That's all we wanted to share,so tell us fam,Wazapp?
+                </p>
+            </div>
+        </div>
+      <div>        
+    </section>
+    <section class="col-12 mt-5 justify-content-center d-flex">
+        <div class="d-flex justify-content-between">
+            <div class="col-8">
+                <details>
+                      <summary class="malifont">What u Listenin' to?</summary>
+                    <option class="malifont">
+                        <p>
+                            Is it Trap?
+                        </p>
+                    </option>
+                    <option class="malifont">
+                        <p>
+                            Is it Boom-Bap?
+                        </p>
+                    </option>
+                    <option class="malifont">
+                            Is it Cloud rap?
+                    </option>
+                    <option class="malifont">
+                            Is it G' Rap?
+                    </option>
+                    <option class="malifont">
+                            Or is it Chopped and Screwed?
+                    </option>
+                </details>
+            </div>
+            <div class="col-4">
+                <p>
+                    U can listen 'em tracks and news about artists from every Hip-Hop sub-genre.That's on us.U like 'em flexing trappers or U 're kinda Old School head?Or U tryna avoid all these fake stuff and only listenin' to Real G's?Or U enjoy with manipulated tracks as a Chopped
+                </p>
+            </div>
+        </div>
     </section>
 </body>
 </html>
