--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="col-4">
                 <ul class="navul d-flex justify-content-between">
                     <li>
-                        About Us
+                        <a class="mali" href="fttr">About Us</a>
                     </li>
                     <li>
                         Articles       
@@ -71,7 +71,7 @@
     </section>
     <section class="col-12 mt-5 justify-content-center d-flex">
         <div class="d-flex justify-content-between">
-            <div class="col-8">
+            <div class="col-4">
                 <details>
                       <summary class="malifont">What u Listenin' to?</summary>
                     <option class="malifont">
@@ -95,12 +95,18 @@
                     </option>
                 </details>
             </div>
-            <div class="col-4">
+            <div class="col-8 malifont2">
                 <p>
-                    U can listen 'em tracks and news about artists from every Hip-Hop sub-genre.That's on us.U like 'em flexing trappers or U 're kinda Old School head?Or U tryna avoid all these fake stuff and only listenin' to Real G's?Or U enjoy with manipulated tracks as a Chopped
+                    U can listen 'em tracks and news about artists from every Hip-Hop sub-genre.That's on us.U like 'em flexing trappers or U 're kinda Old School head?Or U tryna avoid all these fake stuff and only listenin' to Real G's?Or U enjoy with manipulated tracks as a Chopped and Screwed?
+                <p>
+                    Just make a choice and get stick with Us...Dont't Forget to ask everybody Wazapp?
+                </p>
                 </p>
             </div>
         </div>
     </section>
+    <footer class="fttr">
+asdasd
+    </footer>
 </body>
 </html>
