fully done fiirst page

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
             <div class="col-4">
                 <ul class="navul d-flex justify-content-between">
                     <li>
-                        <a class="mali" href="fttr">About Us</a>
+                        <a class="mali hvr" href="#firsthrf">About Us</a>
                     </li>
                     <li>
-                        Articles       
+                        <a class="mali hvr">Articles</a>     
                     </li>
                     <li>
-                        Contact
+                        <a class="mali hvr" href="#fttr">Contact</a>
                     </li>
                 </ul>      
             </div>
@@ -50,7 +50,7 @@
       <div class="col-12">
         <div class="justify-content-center d-flex">
             <div class="justify-content-center d-flex">
-                <h1 class="mrkrfont">
+                <h1 class="mrkrfont firsthrf">
                     what's WAZapp?
                 </h1>
             </div>
@@ -68,6 +68,13 @@
             </div>
         </div>
       <div>        
+    </section>
+    <section class="mt-5 col-12 justify-content-center d-flex">
+        <div class="col-12 d-flex justify-content-between">
+            <img class="col-4" src="imgs/phonograph-record-victrola-vintage-music-center-with-cd-player-45-rpm-adapter-png-favpng-WDPCGXn9C4n.svg">
+            <img class="col-4" src="imgs/png-transparent-record-player-needle-retro-dj-old-school-deejay-scratch-hip-hop-vector-_1_.svg">
+            <img class="col-4" src="imgs/png-transparent-hip-hop-elements-hip-hop-music-recorder.svg">
+        </div>
     </section>
     <section class="col-12 mt-5 justify-content-center d-flex">
         <div class="d-flex justify-content-between">
@@ -105,8 +112,28 @@
             </div>
         </div>
     </section>
-    <footer class="fttr">
-asdasd
+    <section class="mt-5 col-12 justify-content-between d-flex">
+        <div class="col-12">
+          <div class="justify-content-center d-flex">
+              <div class="justify-content-center d-flex">
+                  <h1 class="mrkrfont">
+                      That's WAZapp!
+                  </h1>
+              </div>
+          </div>
+    </section class="mt-5">
+    <footer class="col-12 mt-5 fttr" id="fttr">
+        <div class="col-12 justify-content-center d-flex">
+            <p class="malifont2 mt-custom">Follow Us: </p>
+            <img class="socmedia" src="imgs/social-media-icons-icon-icon-vector-png-and-for-free-468446.svg">
+        </div>
+        <div class="col-12 mt-5 justify-content-center d-flex">
+            <div class="justify-content-center d-flex">
+            <p>
+                Ⓒ All rights reserved.Wazapp 2022
+            </p> 
+            </div>
+        </div>
     </footer>
 </body>
 </html>
