final first page fixed

--- a/Pages/index.html
+++ b/Pages/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Papuna Tsiskadze">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="styling/style.css">
+    <link rel="stylesheet" href="styling">
     <title>WEBB</title>
 </head>
 <body>
@@ -130,7 +130,7 @@
         <div class="col-12 mt-5 justify-content-center d-flex">
             <div class="justify-content-center d-flex">
             <p>
-                Ⓒ All rights reserved.Wazapp 2022
+                ⒸAll rights reserved.Wazapp 2022
             </p> 
             </div>
         </div>
