--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="col-12">
         <div class="justify-content-center d-flex">
             <div class="justify-content-center d-flex">
-                <h1 class="mrkrfont firsthrf">
+                <h1 class="mrkrfont" id="firsthrf">
                     what's WAZapp?
                 </h1>
             </div>
