--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <a class="mali hvr" href="#firsthrf">About Us</a>
                     </li>
                     <li>
-                        <a class="mali hvr">Articles</a>     
+                        <a class="mali hvr" href="Articles.html">Articles</a>     
                     </li>
                     <li>
                         <a class="mali hvr" href="#fttr">Contact</a>
