--- a/Articles.html
+++ b/Articles.html
@@ -16,7 +16,7 @@
         <div class="d-flex justify-content-between align-items-center">
             <div class="col-4 logo">
                 <h1 class="logotext">
-                    WAZapp?
+                    <a href="index.html">WAZapp?</a>
                 </h1>
             </div>
             <div class="col-4">
@@ -46,7 +46,23 @@
             </div>
         </div>
     </header>    
-    
+    <section class="mt-5 col-12 justify-content-between d-flex">
+        <div class="col-12 d-flex justify-content-center">
+          <div class="col-2">
+            <img class="articleimg img-fluid" src="imgs/pngwing.com.png">
+          </div>
+         <div>
+          <div class="textside col-10 text-center">
+              <h2 class="malifont">
+                  MISTER MORALE & BIG STEPPERS
+              </h2>           
+            <p class="malifont2 text-center">
+                This new Kendrick Lamar album feels so meticulous, so detailed, so star-core dense, you’re going to need to clear some space in your head for it. Maybe start by trying to forget that you’re eavesdropping on the theta waves of a generational voice, a Pulitzer Prize winner, a pitchman who once did protest cosplay for Reebok, a superstar who threatened to pull his music from Spotify after the streaming service momentarily removed R. Kelly from its playlists — or whoever else he might be in your memory right now. Don’t think of this as a ceremonial lowering of expectations or a disbursement of free passes. Just make room.
+            </p> 
+          </div>
+         </div>
+        </div>
+    </section>
     <footer class="col-12 mt-5 fttr" id="fttr">
         <div class="col-12 justify-content-center d-flex">
             <p class="malifont2 mt-custom">Follow Us: </p>
