--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="d-flex justify-content-between align-items-center">
             <div class="col-4 logo">
                 <h1 class="logotext">
-                    WAZapp?
+                    <a href="index.html">WAZapp?</a>
                 </h1>
             </div>
             <div class="col-4">
@@ -100,6 +100,9 @@
                     <option class="malifont">
                             Or is it Chopped and Screwed?
                     </option>
+                    <option class="malifont">
+                        aaight...We got U
+                </option>
                 </details>
             </div>
             <div class="col-8 malifont2">
