--- a/Articles.html
+++ b/Articles.html
@@ -58,6 +58,7 @@
               </h2>           
             <p class="malifont2 text-center">
                 This new Kendrick Lamar album feels so meticulous, so detailed, so star-core dense, you’re going to need to clear some space in your head for it. Maybe start by trying to forget that you’re eavesdropping on the theta waves of a generational voice, a Pulitzer Prize winner, a pitchman who once did protest cosplay for Reebok, a superstar who threatened to pull his music from Spotify after the streaming service momentarily removed R. Kelly from its playlists — or whoever else he might be in your memory right now. Don’t think of this as a ceremonial lowering of expectations or a disbursement of free passes. Just make room.
+                <a class="hvr" href="KdotArticle.html">Read More.....</a>
             </p> 
           </div>
          </div>
