--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </section>
     <section class="col-12 mt-5 justify-content-center d-flex">
         <div class="d-flex justify-content-between">
-            <div class="col-4">
+            <div class="col-4 justify-content-center d-flex ">
                 <details>
                       <summary class="malifont">What u Listenin' to?</summary>
                     <option class="malifont">
@@ -102,7 +102,7 @@
                     </option>
                     <option class="malifont">
                         aaight...We got U
-                </option>
+                    </option>
                 </details>
             </div>
             <div class="col-8 malifont2">
