--- a/index.html
+++ b/index.html
@@ -66,21 +66,20 @@
                     At least but not last,yall gon' be able to chek web and see Wazapp,U gon' be asked Wazapp,yall gon' see Wazapp in Hip-Hop industry.That's all we wanted to share,so tell us fam,Wazapp?
                 </p>
             </div>
+            <div class="col-12 d-flex mt-5">
+                <img class="col-4" src="imgs/png-transparent-record-player-needle-retro-dj-old-school-deejay-scratch-hip-hop-vector-_1_.svg">
+                <p class="malifont col-8 text-center">
+                    By the way,Every User has chance to win prizes,the only thing yall have to do is not to miss weekly quizzes.The rules are simple,who manages to get the highest score of weekly quizzes,that guy is the winner.prizes can be different,it might be two tickets for some artists' liveshows,or newly released albums with signature of artist and etc.So don't forget to chek ur profile for quizzes and who knows what u might win?
+                </p>
+            </div>
         </div>
       <div>        
     </section>
-    <section class="mt-5 col-12 justify-content-center d-flex">
-        <div class="col-12 d-flex justify-content-between">
-            <img class="col-4" src="imgs/phonograph-record-victrola-vintage-music-center-with-cd-player-45-rpm-adapter-png-favpng-WDPCGXn9C4n.svg">
-            <img class="col-4" src="imgs/png-transparent-record-player-needle-retro-dj-old-school-deejay-scratch-hip-hop-vector-_1_.svg">
-            <img class="col-4" src="imgs/png-transparent-hip-hop-elements-hip-hop-music-recorder.svg">
-        </div>
-    </section>
     <section class="col-12 mt-5 justify-content-center d-flex">
-        <div class="d-flex justify-content-between">
-            <div class="col-4 justify-content-center d-flex ">
+        <div class="d-flex col-12 justify-content-center">
+            <div class="col-8 d-flex justify-content-center text-center align-items-center">
                 <details>
-                      <summary class="malifont">What u Listenin' to?</summary>
+                      <summary class="hvr malifont">What u Listenin' to?</summary>
                     <option class="malifont">
                         <p>
                             Is it Trap?
@@ -105,7 +104,13 @@
                     </option>
                 </details>
             </div>
-            <div class="col-8 malifont2">
+             <img class="col-4" src="imgs/png-transparent-hip-hop-elements-hip-hop-music-recorder.svg">
+        </div>
+    </section>
+    <section class="mt-5 col-12 justify-content-center d-flex">
+        <div class="col-12 d-flex justify-content-between">
+            <img class="col-4" src="imgs/phonograph-record-victrola-vintage-music-center-with-cd-player-45-rpm-adapter-png-favpng-WDPCGXn9C4n.svg">
+            <div class="col-8 malifont2 text-center mt-custom2">
                 <p>
                     U can listen 'em tracks and news about artists from every Hip-Hop sub-genre.That's on us.U like 'em flexing trappers or U 're kinda Old School head?Or U tryna avoid all these fake stuff and only listenin' to Real G's?Or U enjoy with manipulated tracks as a Chopped and Screwed?
                 <p>
