--- a/BBKEEM.html
+++ b/BBKEEM.html
@@ -46,52 +46,16 @@
             </div>
         </div>
     </header>    
-    <section class="mt-5 col-12 justify-content-between d-flex">
-        <div class="col-12 d-flex justify-content-center">
-          <div class="col-2">
-            <a href="KdotArticle.html">
-                <img class="articleimg img-fluid" src="imgs/pngwing.com.png">
-            </a>
-            </div>
-         <div>
-          <div class="textside col-10 text-center">
-              <a href="KdotArticle.html">
-               <h2 class="malifont hvr">
-                  MISTER MORALE & BIG STEPPERS
-              </h2>  
-              </a>         
-            <p class="malifont2 text-center">
-                This new Kendrick Lamar album feels so meticulous, so detailed, so star-core dense, you’re going to need to clear some space in your head for it. Maybe start by trying to forget that you’re eavesdropping on the theta waves of a generational voice, a Pulitzer Prize winner, a pitchman who once did protest cosplay for Reebok, a superstar who threatened to pull his music from Spotify after the streaming service momentarily removed R. Kelly from its playlists — or whoever else he might be in your memory right now. Don’t think of this as a ceremonial lowering of expectations or a disbursement of free passes. Just make room.
-                <a class="hvr" href="KdotArticle.html">Read More.....</a>
-            </p> 
-          </div>
-         </div>
-        </div>
-    </section>
-    <section class="mt-5 col-12 justify-content-between d-flex">
-        <div class="col-12 d-flex justify-content-center">
-          <div class="col-2">
-            <a href="BBKEEM.html">
-                <img class="mt-5 articleimg img-fluid" src="imgs/Baby-Keem-cr-Anthony-Blue-Jr-press-2021-billboard-1548-1631561617.png">
-            </a>
-            </div>
-         <div>
-          <div class="textside col-10 text-center">
-              <a href="BBKEEM.html">
-               <h2 class="malifont hvr">
-                  The Melodic Blue
-              </h2>  
-              </a>         
-            <p class="malifont2 text-center">
-                    The 20-year-old burgeoning rapper, who is poised to mark a cultural shift in hip-hop, greets you with a teeth-baring grin, which, once he’s comfortable, resurfaces after every couple of sentences. During his hour-long interview with Billboard, Keem touches on everything from his latest single, “Family Ties” debuting at No. 18 on the Billboard Hot 100 (alongside collaborator and cousin Kendrick Lamar) to his struggles as a six-year-old during his mother’s time in rehab, and difficulties today. All the while, he continues to smile.                
-                <a class="hvr" href="BBKEEM.html">
-                    Read More.....
-                </a>
-            </p> 
-          </div>
-         </div>
-        </div>
-    </section>
+    <section class="col-12 mt-5 w-100">
+        <div>
+            <img class="col-12 img-fluid" src="imgs/BBkm.png">
+            <div class="malifont col-12">
+               <p>
+                Up until recently, Baby Keem chose to be an enigma. His voice on the mic is distinctive, a high-pitched whine well-suited to jokes and boasts, but Hykeem Carter, the man behind the persona, often receded from view. Personal details in his music and interviews were scarce, and Keem outright hid his face until he began promoting his 2018 project, The Sound of Bad Habit. Even after revealing himself, he remained tight-lipped, but that didn’t stop eagle-eyed fans from noticing his name in the songwriting and producer credits of Top Dawg Entertainment albums like the 2018 Disney collab Black Panther The Album and Jay Rock’s Redemption. Rumors swirled that Keem was actually Kendrick Lamar’s cousin and merely benefitted from rap nepotism, but as Keem’s popularity and mystique grew on the heels of his 2019 breakout project Die For My Bitch, he kept his distance and mostly let his boisterous music speak for itself.
+               </p>
+               <p>
+                Nepotism or not, the rollout (or, according to former TDE president Dave Free, the “well-executed plan”) for Keem’s debut studio album The Melodic Blue telegraphed a more personal, or at least less secretive, direction for him. He publicly embraced his relationship with Lamar, signing with Lamar and Dave Free’s pgLang collective and releasing the tag-team track “family ties.” The album’s trailer is soundtracked by “scapegoats,” a brief but somber reflection on family that hits a bit closer to home (“Flowers on my uncle’s tomb, thousands to my auntie’s, too/I’m used to taking backstreets, last week was nothing new”) before drawing the curtain back again. While The Melodic Blue is indeed flecked with more intimate writing than usual, it isn’t exactly a confessional. Instead, Keem uses the opportunity to expand his well-established fascination with trap and melody to feature-length—with mixed results.
+               </p>
     <footer class="col-12 mt-5 fttr" id="fttr">
         <div class="col-12 justify-content-center d-flex">
             <p class="malifont2 mt-custom text-center">
