--- a/index.html
+++ b/index.html
@@ -132,8 +132,20 @@
     </section class="mt-5">
     <footer class="col-12 mt-5 fttr" id="fttr">
         <div class="col-12 justify-content-center d-flex">
-            <p class="malifont2 mt-custom">Follow Us: </p>
-            <img class="socmedia" src="imgs/social-media-icons-icon-icon-vector-png-and-for-free-468446.svg">
+            <p class="malifont2 mt-custom text-center">
+                Follow Us: 
+            </p>
+            <div>
+            <a href="https://www.facebook.com/">
+                <img class="socmedia" src="imgs/facebook-2868.svg">
+            </a>
+            <a href="https://www.instagram.com/">
+                <img class="socmedia" src="imgs/black-instagram-logo-3497.svg">
+            </a>
+            <a href="https://twitter.com/?lang=en">
+                <img class="socmedia" src="imgs/twitter-99.svg">
+            </a>
+            </div>
         </div>
         <div class="col-12 mt-5 justify-content-center d-flex">
             <div class="justify-content-center d-flex">
