--- a/BBKEEM.html
+++ b/BBKEEM.html
@@ -48,14 +48,26 @@
     </header>    
     <section class="col-12 mt-5 w-100">
         <div>
-            <img class="col-12 img-fluid" src="imgs/BBkm.png">
-            <div class="malifont col-12">
+            <img class="col-12 img-fluid" src="imgs/2735975.jpg">
+            <div class="malifont col-12 text-center">
                <p>
                 Up until recently, Baby Keem chose to be an enigma. His voice on the mic is distinctive, a high-pitched whine well-suited to jokes and boasts, but Hykeem Carter, the man behind the persona, often receded from view. Personal details in his music and interviews were scarce, and Keem outright hid his face until he began promoting his 2018 project, The Sound of Bad Habit. Even after revealing himself, he remained tight-lipped, but that didn’t stop eagle-eyed fans from noticing his name in the songwriting and producer credits of Top Dawg Entertainment albums like the 2018 Disney collab Black Panther The Album and Jay Rock’s Redemption. Rumors swirled that Keem was actually Kendrick Lamar’s cousin and merely benefitted from rap nepotism, but as Keem’s popularity and mystique grew on the heels of his 2019 breakout project Die For My Bitch, he kept his distance and mostly let his boisterous music speak for itself.
                </p>
                <p>
                 Nepotism or not, the rollout (or, according to former TDE president Dave Free, the “well-executed plan”) for Keem’s debut studio album The Melodic Blue telegraphed a more personal, or at least less secretive, direction for him. He publicly embraced his relationship with Lamar, signing with Lamar and Dave Free’s pgLang collective and releasing the tag-team track “family ties.” The album’s trailer is soundtracked by “scapegoats,” a brief but somber reflection on family that hits a bit closer to home (“Flowers on my uncle’s tomb, thousands to my auntie’s, too/I’m used to taking backstreets, last week was nothing new”) before drawing the curtain back again. While The Melodic Blue is indeed flecked with more intimate writing than usual, it isn’t exactly a confessional. Instead, Keem uses the opportunity to expand his well-established fascination with trap and melody to feature-length—with mixed results.
                </p>
+            </div>
+            <div class="col-12 d-flex">
+            <img class="imgbrdr col-4" src="imgs/tumblr_6b2549fad02862723ea7585787921e60_d1765ef0_1280.jpg">
+            <p class="col-8 malifont">
+                On earlier projects, Keem showed a skill for hopping between rapping and singing, sometimes within the same song. Whether he was screaming “Baby Keem just humbled a model!” on “STATS” or cooing about his indifference toward anyone’s opinions on “Opinions,” it felt like a natural progression, the same artist coming with a different approach. Some of that synergy remains on The Melodic Blue, and the highs are exhilarating. His opening verse on “family ties” is easily among the best of his career. Keem triumphantly skips over horns and thudding 808s with a handful of flows and reminisces on childhood Popeyes trips while puffing out his chest (“It’s a red dot, don’t get on the wrong red-eye”). Both “pink panties” and “first order of business” see Keem switching effortlessly between melody and bars about paying for lace fronts and thanking his mother for her love and support. When he sticks to what initially made Two Phone Baby Keem a success, it’s easy to understand the initial hype.
+            </p>
+            </div>
+            <p class="malifont mt-5 text-center">
+                It’s strange because Baby Keem has always had a strong sense of identity. Whether he’s claiming to be 50 Cent or clowning on his lover’s ex, it’s easy to tell when you’re listening to a Baby Keem song. Much of The Melodic Blue is devoted to trying on other artist’s sounds when it would have benefited from more of Keem refining what already worked about his. An album this theatrical and expansive suggests Keem is aiming for the next level. He doesn’t have to fully open his mind and heart to be a great artist, but he does need to retain his own voice.
+            </p>
+        </div>    
+    </section>
     <footer class="col-12 mt-5 fttr" id="fttr">
         <div class="col-12 justify-content-center d-flex">
             <p class="malifont2 mt-custom text-center">
