--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     </p>
                 </div>
                 <div class="col-12 d-flex mt-5">
-                    <img class="col-4" src="imgs/png-transparent-record-player-needle-retro-dj-old-school-deejay-scratch-hip-hop-vector-_1_.svg">
+                    <img1 class="col-4" src="imgs/png-transparent-record-player-needle-retro-dj-old-school-deejay-scratch-hip-hop-vector-_1_.svg">
                     <p class="malifont col-8 text-center">
                         By the way,Every User has chance to win prizes,the only thing yall have to do is not to miss weekly quizzes.The rules are simple,who manages to get the highest score of weekly quizzes,that guy is the winner.prizes can be different,it might be two tickets for some artists' liveshows,or newly released albums with signature of artist and etc.So don't forget to chek ur profile for quizzes and who knows what u might win?
                     </p>
@@ -109,14 +109,14 @@
                         </option>
                     </details>
                 </div>
-                 <img class="col-4" src="imgs/png-transparent-hip-hop-elements-hip-hop-music-recorder.svg">
+                 <img1 class="col-4" src="imgs/png-transparent-hip-hop-elements-hip-hop-music-recorder.svg">
             </div>
         </section>
         </div>
         <div class="container-fluid">
         <section class="mt-5 col-12 justify-content-center d-flex">
             <div class="col-12 d-flex justify-content-between">
-                <img class="col-4" src="imgs/phonograph-record-victrola-vintage-music-center-with-cd-player-45-rpm-adapter-png-favpng-WDPCGXn9C4n.svg">
+                <img1 class="col-4" src="imgs/phonograph-record-victrola-vintage-music-center-with-cd-player-45-rpm-adapter-png-favpng-WDPCGXn9C4n.svg">
                 <div class="col-8 malifont2 text-center mt-custom2">
                     <p>
                         U can listen 'em tracks and news about artists from every Hip-Hop sub-genre.That's on us.U like 'em flexing trappers or U 're kinda Old School head?Or U tryna avoid all these fake stuff and only listenin' to Real G's?Or U enjoy with manipulated tracks as a Chopped and Screwed?
@@ -148,13 +148,13 @@
                 </p>
                 <div>
                 <a href="https://www.facebook.com/">
-                    <img class="socmedia" src="imgs/facebook-2868.svg">
+                    <img1 class="socmedia" src="imgs/facebook-2868.svg">
                 </a>
                 <a href="https://www.instagram.com/">
-                    <img class="socmedia" src="imgs/black-instagram-logo-3497.svg">
+                    <img1 class="socmedia" src="imgs/black-instagram-logo-3497.svg">
                 </a>
                 <a href="https://twitter.com/?lang=en">
-                    <img class="socmedia" src="imgs/twitter-99.svg">
+                    <img1 class="socmedia" src="imgs/twitter-99.svg">
                 </a>
                 </div>
             </div>
