--- a/BBKEEM.html
+++ b/BBKEEM.html
@@ -58,7 +58,7 @@
                </p>
             </div>
             <div class="col-12 d-flex">
-            <img class="imgbrdr col-4" src="imgs/tumblr_6b2549fad02862723ea7585787921e60_d1765ef0_1280.jpg">
+            <img class="articleimg imgbrdr col-4" src="imgs/tumblr_6b2549fad02862723ea7585787921e60_d1765ef0_1280.jpg">
             <p class="col-8 malifont">
                 On earlier projects, Keem showed a skill for hopping between rapping and singing, sometimes within the same song. Whether he was screaming “Baby Keem just humbled a model!” on “STATS” or cooing about his indifference toward anyone’s opinions on “Opinions,” it felt like a natural progression, the same artist coming with a different approach. Some of that synergy remains on The Melodic Blue, and the highs are exhilarating. His opening verse on “family ties” is easily among the best of his career. Keem triumphantly skips over horns and thudding 808s with a handful of flows and reminisces on childhood Popeyes trips while puffing out his chest (“It’s a red dot, don’t get on the wrong red-eye”). Both “pink panties” and “first order of business” see Keem switching effortlessly between melody and bars about paying for lace fronts and thanking his mother for her love and support. When he sticks to what initially made Two Phone Baby Keem a success, it’s easy to understand the initial hype.
             </p>
